fix: revert `z-index`

--- a/src/components/common/PageLayout/styles.module.css
+++ b/src/components/common/PageLayout/styles.module.css
@@ -3,7 +3,7 @@
   left: 0;
   top: 0;
   width: 100%;
-  z-index: 996;
+  z-index: 1201;
 }
 
 .main {
